syntax = "proto3";
package demo;
option go_package = "./;main";

service UserService {
  // Normal call
  rpc GetUser(GetUserRequest) returns (User);
  
  // Streaming call
  rpc ListUsers(ListUsersRequest) returns (stream User);
}

message User {
  int64 id = 1;
  string name = 2;
}

message GetUserRequest {
  int64 id = 1;
}

message ListUsersRequest {}